--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Theme Template for Bootstrap</title>
+    <title> Visualizations </title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -36,8 +34,22 @@
         <div id='divSvg' class="col-sm-9">
           <div id='spnInfo' class="alert alert-info">Info about the Causes</div>
           <div class='svgHolder'>
-
           </div>
+          <div id='divYearSelection' class="btn-group">
+              <a href='#' class = 'yearSelection' data-value="2001">2001</a>
+              <a href='#' class = 'yearSelection' data-value="2002">2002</a>
+              <a href='#' class = 'yearSelection' data-value="2003">2003</a>
+              <a href='#' class = 'yearSelection' data-value="2004">2004</a>
+              <a href='#' class = 'yearSelection' data-value="2005">2005</a>
+              <a href='#' class = 'yearSelection' data-value="2006">2006</a>
+              <a href='#' class = 'yearSelection' data-value="2007">2007</a>
+              <a href='#' class = 'yearSelection' data-value="2008">2008</a>
+              <a href='#' class = 'yearSelection' data-value="2009">2009</a>
+              <a href='#' class = 'yearSelection' data-value="2010">2010</a>
+              <a href='#' class = 'yearSelection' data-value="2011">2011</a>
+              <a href='#' class = 'yearSelection active' data-value="2012">2012</a>
+          </div>
+          
         </div><!-- /.divSvg -->
         <div id = 'divSvgControl'class="col-sm-3">
           <div class="btn-group" data-toggle="buttons">
@@ -53,7 +65,6 @@
           </div>
           <div>
             <table id="tblLegend">
-
             </table>
           </div>
         </div><!-- /.col-sm-3 -->
