--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap theme -->
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/color.min.css" rel="stylesheet">
+    <!-- Font Awesome External Link -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/indian-suicide.css" rel="stylesheet">
@@ -32,36 +35,30 @@
 
       <div class="row">
         <div id='divSvg' class="col-sm-9">
-          <div id='spnInfo' class="alert alert-info">Info about the Causes</div>
+          <div id='spnInfo'>Current Filters : </div>
           <div class='svgHolder'>
           </div>
           <div id='divYearSelection' class="btn-group">
-              <a href='#' class = 'yearSelection' data-value="2001">2001</a>
-              <a href='#' class = 'yearSelection' data-value="2002">2002</a>
-              <a href='#' class = 'yearSelection' data-value="2003">2003</a>
-              <a href='#' class = 'yearSelection' data-value="2004">2004</a>
-              <a href='#' class = 'yearSelection' data-value="2005">2005</a>
-              <a href='#' class = 'yearSelection' data-value="2006">2006</a>
-              <a href='#' class = 'yearSelection' data-value="2007">2007</a>
-              <a href='#' class = 'yearSelection' data-value="2008">2008</a>
-              <a href='#' class = 'yearSelection' data-value="2009">2009</a>
-              <a href='#' class = 'yearSelection' data-value="2010">2010</a>
-              <a href='#' class = 'yearSelection' data-value="2011">2011</a>
-              <a href='#' class = 'yearSelection active' data-value="2012">2012</a>
+              <a href='#' class = 'yearSelection controls' data-value="2001">2001</a>
+              <a href='#' class = 'yearSelection controls' data-value="2002">2002</a>
+              <a href='#' class = 'yearSelection controls' data-value="2003">2003</a>
+              <a href='#' class = 'yearSelection controls' data-value="2004">2004</a>
+              <a href='#' class = 'yearSelection controls' data-value="2005">2005</a>
+              <a href='#' class = 'yearSelection controls' data-value="2006">2006</a>
+              <a href='#' class = 'yearSelection controls' data-value="2007">2007</a>
+              <a href='#' class = 'yearSelection controls' data-value="2008">2008</a>
+              <a href='#' class = 'yearSelection controls' data-value="2009">2009</a>
+              <a href='#' class = 'yearSelection controls' data-value="2010">2010</a>
+              <a href='#' class = 'yearSelection controls' data-value="2011">2011</a>
+              <a href='#' class = 'yearSelection controls active' data-value="2012">2012</a>
           </div>
           
         </div><!-- /.divSvg -->
         <div id = 'divSvgControl'class="col-sm-3">
-          <div class="btn-group" data-toggle="buttons">
-            <label class="lblRdo btn btn-primary">
-              <input type="radio" name="rdoGender" id="male" value="M_T"> M
-            </label>
-            <label class="lblRdo btn btn-primary">
-              <input type="radio" name="rdoGender" id="female" value="F_T"> F
-            </label>
-            <label class="lblRdo btn btn-primary active">
-              <input type="radio" name="rdoGender" id="all" value="G_T" checked> All
-            </label>
+          <div id='divGenderSelection' class="btn-group">
+              <a href='#' class = 'genderSelection controls' data-value="M_T"><i class="fa fa-male fa-lg"></i></a>
+              <a href='#' class = 'genderSelection controls' data-value="F_T"><i class="fa fa-female fa-lg"></i></a>
+              <a href='#' class = 'genderSelection controls active' data-value="G_T"><i class="fa fa-male fa-lg"></i> + <i class="fa fa-female fa-lg"></i>&nbsp;</a>
           </div>
           <div>
             <table id="tblLegend">
