Colors project for a better looking color.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap theme -->
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="css/color.min.css" rel="stylesheet">
+    <link href="css/colors.min.css" rel="stylesheet">
     <!-- Font Awesome External Link -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
+    <!-- CSS for the 3d effect -->
+    <!-- <link href="css/grid-3d-effect.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
     <link href="css/indian-suicide.css" rel="stylesheet">
     <link href="css/d3.tip.css" rel="stylesheet">
@@ -27,9 +28,15 @@
 
     <div class="container theme-showcase">
 
-      <div class="jumbotron">
-        <h1>Visualizations</h1>
-        <p>Place holder for title and stuff</p>
+      <div class="row">
+          <h1>Visualizations</h1>
+        <!--
+          <ul class="grid">
+          <li class="ot-letter-left"><span data-letter="S">S</span></li>
+          </ul>
+        -->  
+           <hr/>
+           <h2>Suicide Data By Cause, Year, States of India</h2>
         
       </div>
 
