--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
       </div>
 
       <div class="row">
-        <div id='divSvg' class="col-sm-9">
+        <div id='divSvg' class="col-sm-8">
           <div id='spnInfo'>Current Filters : </div>
           <div class='svgHolder'>
           </div>
-          <div id='divYearSelection' class="btn-group">
+          
+        </div><!-- /.divSvg -->
+        <div id='divYearSelection' class="col-sm-1 btn-group">
               <a href='#' class = 'yearSelection controls' data-value="2001">2001</a>
               <a href='#' class = 'yearSelection controls' data-value="2002">2002</a>
               <a href='#' class = 'yearSelection controls' data-value="2003">2003</a>
@@ -59,8 +61,6 @@
               <a href='#' class = 'yearSelection controls' data-value="2011">2011</a>
               <a href='#' class = 'yearSelection controls active' data-value="2012">2012</a>
           </div>
-          
-        </div><!-- /.divSvg -->
         <div id = 'divSvgControl'class="col-sm-3">
           <div id='divGenderSelection' class="btn-group">
               <a href='#' class = 'genderSelection controls' data-value="M_T"><i class="fa fa-male fa-lg"></i></a>
